sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  for (i<-0 to taille-1) {
    while (plusPetitQue(i,i+1)==false) {
      var taille=getNombreValeurs()
      for (i<-0 to taille-1) {
        if (plusPetitQue(i,i+1)==true) {
          echange(i,i+1)
    }
  }
    }
  }
}